--- a/digitalCard-date-service/front_part/css/recommend.css
+++ b/digitalCard-date-service/front_part/css/recommend.css
@@ -138,7 +138,7 @@ html {
 
   .header__title{
     font-size: 1rem;
-    color: var(--color-white);
+    color: var(--color-black);
     text-align: center;
   }
   
@@ -299,5 +299,7 @@ button:hover {
       border: 2px solid var(--color-yellow);
     }
   }
+
+  
 
 
