--- a/digitalCard-date-service/front_part/css/login.css
+++ b/digitalCard-date-service/front_part/css/login.css
@@ -58,14 +58,14 @@ body, html {
 }
 
 .logo {
-  width: 70px;
+  width: 100px;
   height: auto;
   margin-bottom: 20px;
   animation: spin 2s ease-in-out forwards;
 }
 
 .welcome-text {
-  font-size: 36px;
+  font-size: 3rem;
   font-weight: 900;
   line-height: 1.2;
 }
@@ -85,7 +85,7 @@ body, html {
   max-width: 380px;
   background: var(--color-white);
   padding: 20px;
-  border-radius: 12px;
+  border-radius: 30px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
   text-align: center;
 }
@@ -101,12 +101,13 @@ body, html {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  margin-bottom: 16px;
+  margin-bottom: 20px;
   width: 100%;
+  gap: 10px;
 }
 
 .input-field label {
-  font-size: 0.9rem;
+  font-size: 1.2rem;
   color: var(--color-deepGray);
   margin-bottom: 8px;
 }
@@ -115,7 +116,7 @@ body, html {
   width: 95%;
   padding: 12px;
   border: 1px solid var(--color-deepGray);
-  border-radius: 8px;
+  border-radius: 30px;
   font-size: 0.9rem;
   transition: border-color 0.3s ease, box-shadow 0.3s ease;
   touch-action: manipulation;
@@ -132,11 +133,13 @@ body, html {
   color: var(--color-white);
   padding: 12px;
   border: none;
-  border-radius: 8px;
+  border-radius: 30px;
   font-size: 1rem;
   cursor: pointer;
   transition: background-color 0.3s ease, transform 0.2s ease;
   touch-action: manipulation; 
+  width: 20%;
+  align-self: flex-end;
 }
 
 .btn:hover {
@@ -209,7 +212,8 @@ body, html {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 5px;
+    gap: 10px;
+    margin-bottom: 30px;
   }
   .input-field label {
     font-size: 1.2rem;
@@ -224,7 +228,8 @@ body, html {
   .btn {
     font-size: 0.9rem;
     padding: 10px;
-    width: 50%;
+    width: 30%;
+    align-self: auto;
   }
   .btn:active {
     background-color: var(--color-peach);
@@ -235,6 +240,6 @@ body, html {
   }
 
   .check-icon {
-    font-size: 1rem;
+    font-size: 1.5rem;
   }
 }
