--- a/digitalCard-date-service/front_part/css/onboarding.css
+++ b/digitalCard-date-service/front_part/css/onboarding.css
@@ -682,6 +682,7 @@ html {
 }
 
 .start_card-back {
+  text-align: center;
   transform: rotateY(180deg);
   background-color: var(--color-yello);
   color: var(--color-accent);
@@ -788,7 +789,7 @@ html {
 #arrow-up {
   position: fixed;
   bottom: 50px;
-  right: 30px;
+  right: 20px;
   display: none;
   background-color: var(--color-accent-variant);
   color: var(--color-primary);
