--- a/digitalCard-date-service/front_part/css/onboarding.css
+++ b/digitalCard-date-service/front_part/css/onboarding.css
@@ -158,7 +158,7 @@ html {
 #home{
     width: 100%;
     background-color: var(--color-primary);
-    margin-top: 50px;
+    padding-top: 50px;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -379,8 +379,8 @@ html {
     width: 100%;
     background-color: var(--color-primary);
     @media (max-width: 834px) {
-      margin: 0;
       max-height: 800px;
+      margin: 0;
     }
 }
 
@@ -706,6 +706,11 @@ html {
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   transition: all 0.3s ease;
   text-align: center;
+  @media (max-width: 834px) {
+    /* 모바일환경에서 클릭되지 않는 오류 수정 */
+    z-index: 50;
+    pointer-events: auto; 
+  }
 }
 
 .start_cardButton:hover {
@@ -717,7 +722,7 @@ html {
 
 .start_cardButton:active {
   transform: translateY(0); 
-  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2); 
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.2);
 }
 
 .start_nextStep-container {
