--- a/digitalCard-date-service/front_part/css/cardWritting.css
+++ b/digitalCard-date-service/front_part/css/cardWritting.css
@@ -32,6 +32,7 @@ body, html{
   margin: 0;
   padding: 0;
   overflow-x: hidden;
+  overflow-y: auto;
 }
 
 a {
@@ -99,12 +100,12 @@ html {
 /* main */
 #main {
   background-color: var(--color-primary-variant);
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 90 90'%3E%3Ccircle fill-opacity='0.65' fill='%23FFFFFF' cx='45' cy='45' r='8'/%3E%3Cg fill='%23FF8A80' fill-opacity='0.65'%3E%3Ccircle cx='0' cy='90' r='8'/%3E%3Ccircle cx='90' cy='90' r='8'/%3E%3Ccircle cx='90' cy='0' r='8'/%3E%3Ccircle cx='0' cy='0' r='8'/%3E%3C/g%3E%3C/svg%3E");    padding: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-direction: column;
   gap: 35px;
+  padding: 100px;
   @media (max-width: 834px){
     height: 100vh;
     width: 100vw;
@@ -112,7 +113,7 @@ html {
   }
 }
 
-.form-container:hover::after {
+/* .form-container:hover::after {
   display: flex;
   align-items: center; 
   justify-content: center; 
@@ -134,7 +135,7 @@ html {
   @media (max-width: 834px){
     display: none;
   }
-}
+} */
 
 
 .form-container {
@@ -221,7 +222,7 @@ html {
   }
 }
 
-@media (max-width: 834px) {
+/* @media (max-width: 834px) {
   .card_UX::After{
     display: block;
     white-space: pre-wrap;
@@ -231,7 +232,7 @@ html {
     font-size: 12px;
     top: 210px;
   }
-}
+} */
 
 .card_UX-topContainer{
   width: 100%;
@@ -247,14 +248,14 @@ html {
   padding: 7px;
   display: flex;
   gap: 20px;
-  justify-content: space-between;
+  justify-content: space-evenly;
   align-items: center;
   @media (max-width: 834px) {
     gap: 10px;
   }
 }
 
-.submitButton{
+.submitButton, .formCheckButton{
   border: 1px solid var(--color-DeepGray);
   border-radius: 20px;
   background-color: var(--color-DeepGray);
@@ -268,6 +269,22 @@ html {
   }
 }
 
+@media (max-width: 834px) {
+  .card_UX-topContainer {
+    flex-direction: row; 
+    flex-wrap: wrap; 
+    justify-content: center; 
+    gap: 20px; 
+  }
+
+  .submitButton,
+  .formCheckButton {
+    font-size: 1rem;
+    padding: 10px; 
+  }
+}
+
+
 .submitButton:hover{
 transform: translateY(-2px); 
 box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); 
@@ -276,6 +293,15 @@ box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3);
   box-shadow: none;
 }
 }
+
+.formCheckButton:hover{
+  transform: translateY(-2px); 
+  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); 
+  @media (max-width: 834px) {
+    transform: none;
+    box-shadow: none;
+  }
+  }
 
 .color{
   width: 30px;
@@ -348,6 +374,69 @@ hr {
   width: 100%;         
   border: 1px solid var(--color-DeepGray); 
   margin: 0;             
+}
+
+/* modal */
+#modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background: var(--color-white);
+  padding: 20px;
+  border-radius: 30px;
+  max-width: 800px;
+  text-align: center;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  @media (max-width: 834px) {
+    max-width: 370px;
+    padding: 5px;
+  }
+}
+
+.modal-title {
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 10px;
+  @media (max-width: 834px) {
+    visibility: hidden;
+  }
+}
+
+@media (max-width: 834px) {
+  .modal-content::before{
+    visibility: visible;
+    display: block;
+    text-align: center;
+    white-space: pre-wrap;
+    content: "작성양식 준수!\A원활한 추천서비스 이용시 필요";
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+}
+
+.modal-description {
+  font-size: 14px;
+  color: var(--color-DeepGray);
+  margin-bottom: 20px;
+}
+
+.modal-button {
+  padding: 10px 20px;
+  font-size: 16px;
+  background-color: var(--color-accent-variant);
+  color: var(--color-white);
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
 /* contact */
