--- a/digitalCard-date-service/front_part/css/cardDrawing.css
+++ b/digitalCard-date-service/front_part/css/cardDrawing.css
@@ -12,8 +12,8 @@
     --color-deep-pink: #ff577f;
     --color-primary: var(--color-white);
     --color-primary-variant:var(--color-gray);
-    --color-accent: var(--color-coral);
-    --color-accent-variant: var(--color-peach);
+    --color-accent: var(--color-deep-pink);
+    --color-accent-variant: var(--color-hot-pink);
     --color-text-variant: var(--color-DifferentGray);
 }
 
@@ -165,13 +165,21 @@
     }
 }
 
+@media (max-width: 834px) {
+  section:hover{
+    transform: scale(1.15);
+    border-color: rgba(255, 255, 0, 1); 
+    animation: glow-border 1s infinite alternate; 
+  }
+}
+
   .draw-random{
-    border: 20px solid var(--color-coral);
+    border: 20px solid var(--color-accent);
     border-style: solid;
   }
 
   .draw-recommend{
-    border: 20px solid var(--color-coral);
+    border: 20px solid var(--color-accent);
     border-style: solid;
   }
 
@@ -232,8 +240,7 @@
     transform: translateY(-2px); 
     box-shadow: 0 6px 12px rgba(0, 0, 0, 0.3); 
     @media (max-width: 834px){
-      transform: none;
-      box-shadow: none;
+      transform: translateY(2px);
     }
   }
 
@@ -293,12 +300,18 @@
     margin-top: 20px; 
     padding: 10px 20px;
     font-size: 16px;
-    color: var(--color-black);
-    background-color: var(--color-primary);
+    color: var(--color-white);
+    background-color: var(--color-accent-variant);
     border: none;
     border-radius: 5px;
     cursor: pointer;
     transition: background-color 0.3s;
+}
+
+@media (max-width: 834px) {
+  .drawButton:active{
+    background-color: var(--color-accent);
+  }
 }
 
 .modal-overlay {
@@ -364,6 +377,12 @@
       color: none;
     }
   }
+
+  @media (max-width: 834px) {
+    .contact__SNS-container a:active{
+        color: var(--color-accent);
+    }
+  }
   
   .contact_img{
     object-fit: cover;
@@ -375,10 +394,3 @@
     }
   }
   
-    @media(max-width: 834px){
-    button:active{
-      background-color: gold;
-      color: var(--color-white);
-      border: 2px solid var(--color-yellow);
-    }
-  }
