--- a/digitalCard-date-service/front_part/css/aiSimulation.css
+++ b/digitalCard-date-service/front_part/css/aiSimulation.css
@@ -20,18 +20,18 @@
   --color-DifferentGray: #888888;
   --color-primary: var(--color-white);
   --color-primary-variant:var(--color-gray);
-  --color-accent: var(--color-coral);
-  --color-accent-variant: var(--color-peach);
+  --color-accent: var(--color-deep-pink);
+  --color-accent-variant: var(--color-hot-pink);
   --color-text-variant: var(--color-DifferentGray);
 }
 
 /* animation */
 @keyframes blink {
   0%, 100% {
-      color: var(--color-coral); /* 기본 색 */
+      color: var(--color-accent); /* 기본 색 */
   }
   50% {
-      color: var(--color-peach) /* 깜빡일 때 색 */
+      color: var(--color-accent-variant) /* 깜빡일 때 색 */
   }
 }
 
@@ -255,7 +255,7 @@ body {
 
 .user {
   text-align: right;
-  color: var(--color-coral); 
+  color: var(--color-accent-variant); 
   font-style: italic; 
   margin-bottom: 10px;
 }
@@ -282,15 +282,15 @@ body {
 
 #user-input:focus {
   outline: none;
-  border-color: var(--color-coral);
-  box-shadow: 0 0 8px rgba(255, 105, 135, 0.4); 
+  border-color: var(--color-accent);
+  box-shadow: 0 0 8px var(--color-soft-pink); 
 }
 
 #send-button {
   padding: 12px 20px;
   font-size: 14px;
   font-family: 'Poppins', sans-serif;
-  background: var(--color-peach);
+  background: var(--color-accent-variant);
   color: var(--color-white);
   border: none;
   border-radius: 15px;
@@ -300,7 +300,7 @@ body {
 }
 
 #send-button:hover {
-  background: var(--color-coral); 
+  background: var(--color-accent); 
   transform: translateY(-2px);
 }
 
@@ -308,6 +308,10 @@ body {
   transform: translateY(0);
   background: var(--color-DifferentGray); 
   box-shadow: inset 0 2px 4px rgba(0, 0, 0, 0.2);
+  @media (max-width: 834px) {
+    transform: translateY(2px);
+    background: var(--color-accent);
+}
 }
 
 
@@ -350,7 +354,7 @@ body {
 .modal-button {
   padding: 10px 20px;
   font-size: 16px;
-  background-color: var(--color-peach);
+  background-color: var(--color-accent-variant);
   color: var(--color-white);
   border: none;
   border-radius: 30px;
@@ -358,7 +362,7 @@ body {
 }
 
 .modal-button:hover {
-  background-color: var(--color-coral);
+  background-color: var(--color-accent);
 }
 
 /* survey link */
@@ -370,14 +374,14 @@ body {
   font-size: 1.5rem;
   text-align: center;
   padding: 10px;
-  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15); /* 얕고 부드러운 그림자 */
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.15); 
   @media (max-width: 834px) {
     font-size: 1.2rem;
   }
 }
 
 .survey_link{
-  color: var(--color-coral);
+  color: var(--color-accent);
   font-size: 1.7rem;
   animation: blink 1s infinite;
   @media (max-width: 834px) {
@@ -432,6 +436,12 @@ body {
   color: var(--color-accent);
   @media (max-width: 834px){
     color: none;
+  }
+}
+
+@media (max-width: 834px) {
+  .contact__SNS-container a:active{
+      color: var(--color-accent);
   }
 }
            
