--- a/digitalCard-date-service/front_part/css/login.css
+++ b/digitalCard-date-service/front_part/css/login.css
@@ -13,8 +13,8 @@
   --color-deep-pink: #ff577f;
   --color-primary: var(--color-white);
   --color-primary-variant:var(--color-gray);
-  --color-accent: var(--color-hot-pink);
-  --color-accent-variant: var(--color-soft-pink);
+  --color-accent: var(--color-deep-pink);
+  --color-accent-variant: var(--color-hot-pink);
   --color-text-variant: var(--color-DifferentGray);
 }
 
@@ -51,7 +51,7 @@ body, html {
 /* 왼쪽 영역 */
 .left-wrap {
   flex: 1;
-  background: linear-gradient(to bottom, var(--color-coral), var(--color-peach));
+  background: linear-gradient(to bottom, var(--color-accent), var(--color-soft-pink));
   color: var(--color-white);
   display: flex;
   flex-direction: column;
@@ -77,7 +77,7 @@ body, html {
 /* 오른쪽 영역 */
 .right-wrap {
   flex: 1;
-  background: var(--color-white);
+  background: var(--color-primary);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -87,7 +87,7 @@ body, html {
 .login-container {
   width: 100%;
   max-width: 380px;
-  background: var(--color-white);
+  background: var(--color-primary);
   padding: 20px;
   border-radius: 30px;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
@@ -98,7 +98,7 @@ body, html {
   font-size: 1.5rem;
   font-weight: bold;
   margin-bottom: 20px;
-  color: var(--color-coral);
+  color: var(--color-accent-variant);
 }
 
 .input-field {
@@ -127,13 +127,13 @@ body, html {
 }
 
 .input-field input:focus {
-  border-color: var(--color-coral);
-  box-shadow: 0 0 8px rgba(255, 111, 97, 0.5);
+  border-color: var(--color-accent);
+  box-shadow: 0 0 8px var(--color-soft-pink);
   outline: none;
 }
 
 .btn {
-  background-color: var(--color-coral);
+  background-color: var(--color-accent-variant);
   color: var(--color-white);
   padding: 12px;
   border: none;
@@ -147,7 +147,7 @@ body, html {
 }
 
 .btn:hover {
-  background-color: var(--color-peach);
+  background-color: var(--color-accent);
   transform: translateY(-2px);
 }
 
@@ -236,7 +236,7 @@ body, html {
     align-self: auto;
   }
   .btn:active {
-    background-color: var(--color-peach);
+    background-color: var(--color-accent);
   }
 
   .check__desc {
@@ -247,3 +247,4 @@ body, html {
     font-size: 1.5rem;
   }
 }
+
