--- a/digitalCard-date-service/front_part/css/randomOpen.css
+++ b/digitalCard-date-service/front_part/css/randomOpen.css
@@ -20,8 +20,8 @@
     --color-deep-pink: #ff577f;
     --color-primary: var(--color-white);
     --color-primary-variant:var(--color-gray);
-    --color-accent: var(--color-coral);
-    --color-accent-variant: var(--color-peach);
+    --color-accent: var(--color-deep-pink);
+    --color-accent-variant: var(--color-hot-pink);
     --color-text-variant: var(--color-DifferentGray);
 }
 
@@ -274,7 +274,7 @@ transform: rotateY(0deg);
 }
 
 button {
-  background: linear-gradient(135deg, #FFC1E3, #FF8A80); 
+  background: linear-gradient(135deg, var(--color-accent), var(--color-accent-variant)); 
   color: var(--color-white); 
   font-size: 1.2rem;
   font-weight: bold;
@@ -282,20 +282,20 @@ button {
   border: none;
   border-radius: 20px; 
   cursor: pointer;
-  box-shadow: 0 4px 10px rgba(255, 105, 135, 0.3); 
+  box-shadow: 0 4px 10px var(--color-soft-pink);
   transition: transform 0.3s ease, box-shadow 0.3s ease, background 0.3s ease;
 }
 
 button:hover {
-  background: linear-gradient(135deg, #FF8A80, #FFC1E3); 
+  background: linear-gradient(135deg, var(--color-accent-variant), var(--color-accent)); 
   transform: translateY(-3px); 
-  box-shadow: 0 8px 20px rgba(255, 105, 135, 0.5); 
+  box-shadow: 0 8px 20px var(--color-soft-pink); 
 }
 
 button:active {
-  background: linear-gradient(135deg, #FF6F61, #FF8A80); 
+  background: linear-gradient(135deg, var(--color-accent-variant), var(--color-accent)); 
   transform: translateY(0); 
-  box-shadow: 0 4px 8px rgba(255, 105, 135, 0.2); 
+  box-shadow: 0 4px 8px var(--color-soft-pink);
 }
 
 #nextButton a {
@@ -304,9 +304,9 @@ button:active {
 
 @media(max-width: 834px){
   button:active{
-    background: linear-gradient(135deg, #FF8A80, #FFC1E3); 
+    background: linear-gradient(135deg, var(--color-accent-variant), var(--color-accent)); 
     transform: translateY(3px); 
-    box-shadow: 0 8px 20px rgba(255, 105, 135, 0.5); 
+    box-shadow: 0 8px 20px var(--color-soft-pink); 
   }
 }
 
